# nerf_wasp

./: NERF_WASP.pptx  README.md  pyproject.toml
scripts/: alvis_roberta_base_2_dsets.sh  alvis_roberta_base_3_dsets.sh  alvis_roberta_base_all_dsets.sh  alvis_roberta_base_baseline.sh
src/: client_app.py  client_app_federated.py  client_app_federated_nonsimulated.py  federated_learning.py  federated_learning_nonsimulated.py  run_baseline.py  server_app.py  server_app_federated.py  server_app_federated_nonsimulated.py  task.py
test/: test_client_fn.py  test_flwr.py
